package Tarea_S8.Ejercicio2;

public class DatoInvalidoException extends Exception {
    public DatoInvalidoException(String msg) {
        super(msg);
    }
}
